--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
 
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity>
-        <!-- database/原生数据库 -->
+        </activity> <!-- database/原生数据库 -->
         <activity android:name=".db.primordial.DatabaseActivity">
 
             <!-- <intent-filter> -->
@@ -40,8 +39,7 @@
 
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity>
-        <!-- ui/三方动画库/Lottie -->
+        </activity> <!-- ui/三方动画库/Lottie -->
         <activity android:name=".ui.animation.LottieActivity">
 
             <!-- <intent-filter> -->
@@ -57,8 +55,7 @@
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity>
-        <!-- ui/others/google官方图片加载优化实践bitmapfun -->
+        </activity> <!-- ui/others/google官方图片加载优化实践bitmapfun -->
         <activity
             android:name="com.android.others.bitmapfun.ui.ImageGridActivity"
             android:label="@string/app_name"
@@ -77,8 +74,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.android.others.bitmapfun.ui.ImageGridActivity" />
-        </activity>
-        <!-- hybird/原生webview -->
+        </activity> <!-- hybird/原生webview -->
         <activity android:name=".hybird.webview.WebActivity">
 
             <!-- <intent-filter> -->
@@ -94,8 +90,7 @@
 
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity>
-        <!-- framework/binder/aidl生成 -->
+        </activity> <!-- framework/binder/aidl生成 -->
         <activity android:name=".framework.binder.aidl.AidlActivity">
 
             <!-- <intent-filter> -->
@@ -108,8 +103,7 @@
             android:name=".framework.binder.aidl.AidlService"
             android:enabled="true"
             android:exported="true"
-            android:process=":AidlService" />
-        <!-- framework/binder/customsize(手动编写) -->
+            android:process=":AidlService" /> <!-- framework/binder/customsize(手动编写) -->
         <activity android:name=".framework.binder.customsize.CustomsizeActivity">
 
             <!-- <intent-filter> -->
@@ -122,23 +116,34 @@
             android:name=".framework.binder.customsize.CustomsizeService"
             android:enabled="true"
             android:exported="true"
-            android:process=":BinderService" />
-        <!--framework/dispatchevent/事件分发-->
+            android:process=":BinderService" /> <!-- framework/dispatchevent/事件分发 -->
         <activity android:name=".framework.dispatchevent.DispatchEventActivity">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
-        </activity>
-        <!--framework/dispatchevent/滑动冲突-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity> <!-- framework/dispatchevent/滑动冲突 -->
         <activity android:name=".framework.dispatchevent.ScrollConflictActivity">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
-        </activity> <!-- basics/lifecycle -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <!-- framework/viewdrawing(view绘制流程) -->
+        <activity android:name=".framework.viewdrawing.ViewDrawingActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- basics/lifecycle -->
         <activity android:name=".basics.lifecycle.Lifecycle1Activity">
 
             <!-- <intent-filter> -->
@@ -149,13 +154,13 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".basics.lifecycle.Lifecycle2Activity" />
-        <!--component(组件化)-->
+        <!-- component(组件化) -->
         <activity android:name=".component.ComponentActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <activity android:name=".memoryleak.MemoryLeak3Activity">
 
