--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,44 +23,54 @@
         android:theme="@style/AppTheme">
         <!-- database/三方库greendao -->
         <activity android:name=".db.greendao.GreenDaoActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity> <!-- database/原生数据库 -->
+        </activity>
+        <!-- database/原生数据库 -->
         <activity android:name=".db.primordial.DatabaseActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity> <!-- ui/三方动画库/Lottie -->
+        </activity>
+        <!-- ui/三方动画库/Lottie -->
         <activity android:name=".ui.animation.LottieActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity> <!-- ui/bitmap -->
+        </activity>
+        <!-- ui/原生动画 -->
+        <activity android:name=".ui.animation.AnimationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- ui/原生动画/属性动画 -->
+        <activity android:name=".ui.animation.PropertyAnimatorActivity" />
+        <!-- ui/原生动画/属性动画/自定义view -->
+        <activity android:name=".ui.animation.PracticeActivity" />
+        <!-- ui/原生动画/补间动画 -->
+        <activity android:name=".ui.animation.TweenAnimationActivity" />
+        <!-- ui/原生动画/帧动画 -->
+        <activity android:name=".ui.animation.FrameAnimationActivity"/>
+        <!-- ui/bitmap -->
         <activity
             android:name=".ui.bitmap.BitmapActivity"
             android:exported="true">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity> <!-- ui/others/google官方图片加载优化实践bitmapfun -->
+        </activity>
+        <!-- ui/others/google官方图片加载优化实践bitmapfun -->
         <activity
             android:name="com.android.others.bitmapfun.ui.ImageGridActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
@@ -74,64 +84,56 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.android.others.bitmapfun.ui.ImageGridActivity" />
-        </activity> <!-- hybird/原生webview -->
+        </activity>
+        <!-- hybird/原生webview -->
         <activity android:name=".hybird.webview.WebActivity">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity> <!-- optimization/UI优化实践 -->
-        <activity android:name=".optimization.ui.UIOptimizationActivity">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity> <!-- framework/binder/aidl生成 -->
-        <activity android:name=".framework.binder.aidl.AidlActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-
+        <!-- optimization/UI优化实践 -->
+        <activity android:name=".optimization.ui.UIOptimizationActivity">
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <!-- framework/binder/aidl生成 -->
+        <activity android:name=".framework.binder.aidl.AidlActivity">
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
         <service
             android:name=".framework.binder.aidl.AidlService"
             android:enabled="true"
             android:exported="true"
-            android:process=":AidlService" /> <!-- framework/binder/customsize(手动编写) -->
+            android:process=":AidlService" />
+        <!-- framework/binder/customsize(手动编写) -->
         <activity android:name=".framework.binder.customsize.CustomsizeActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-
         <service
             android:name=".framework.binder.customsize.CustomsizeService"
             android:enabled="true"
             android:exported="true"
-            android:process=":BinderService" /> <!-- framework/dispatchevent/事件分发 -->
+            android:process=":BinderService" />
+        <!-- framework/dispatchevent/事件分发 -->
         <activity android:name=".framework.dispatchevent.DispatchEventActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity> <!-- framework/dispatchevent/滑动冲突 -->
+        </activity>
+        <!-- framework/dispatchevent/滑动冲突 -->
         <activity android:name=".framework.dispatchevent.ScrollConflictActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
@@ -139,65 +141,47 @@
         <activity android:name=".framework.viewdrawing.ViewDrawingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <!-- basics/lifecycle -->
         <activity android:name=".basics.lifecycle.Lifecycle1Activity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".basics.lifecycle.Lifecycle2Activity" />
         <!-- component(组件化) -->
         <activity android:name=".component.ComponentActivity">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
-
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
-        </activity>
-        <activity android:name=".memoryleak.MemoryLeak3Activity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity android:name=".memoryleak.MemoryLeak3Activity">
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".memoryleak.MemoryLeak2Activity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".memoryleak.MemoryLeakActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".memoryleak.NormalActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
     </application>
-
 </manifest>
