--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -44,10 +45,10 @@
         </activity>
         <!-- ui/原生动画 -->
         <activity android:name=".ui.animation.AnimationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter>-->
+            <!-- <action android:name="android.intent.action.MAIN" />-->
+            <!-- <category android:name="android.intent.category.LAUNCHER" />-->
+            <!-- </intent-filter>-->
         </activity>
         <!-- ui/原生动画/属性动画 -->
         <activity android:name=".ui.animation.PropertyAnimatorActivity" />
@@ -139,10 +140,10 @@
         </activity>
         <!-- framework/viewdrawing(view绘制流程) -->
         <activity android:name=".framework.viewdrawing.ViewDrawingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter>-->
+            <!-- <action android:name="android.intent.action.MAIN" />-->
+            <!-- <category android:name="android.intent.category.LAUNCHER" />-->
+            <!-- </intent-filter>-->
         </activity>
         <!-- basics/lifecycle -->
         <activity android:name=".basics.lifecycle.Lifecycle1Activity">
@@ -154,10 +155,10 @@
         <activity android:name=".basics.lifecycle.Lifecycle2Activity" />
         <!-- component(组件化) -->
         <activity android:name=".component.ComponentActivity">
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
         </activity>
         <activity android:name=".memoryleak.MemoryLeak3Activity">
             <!-- <intent-filter> -->
