--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         // in the individual module build.gradle files
 
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'//greendao
+
+        classpath 'com.orzangleli:checkresourceconflict:0.0.2'//checkresourceconflict
     }
 }
 
