--- a/component_module2/src/main/AndroidManifest.xml
+++ b/component_module2/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.android.component_module2">
 
     <application
+        android:name=".Module2App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/m2_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Study">
