--- a/config.gradle
+++ b/config.gradle
@@ -1,6 +1,6 @@
 ext {
     //false:组件化模式 true:集成模式
-    isModule = false
+    isModule = true
     android = [
             compileSdkVersion: 29,
             buildToolsVersion: "29.0.3",
@@ -19,9 +19,20 @@ ext {
     appCompat = "1.2.0"
     constraintLayout = "1.1.3"
     material = "1.2.1"
+    junit = "4.12"
+    ext_junit = "1.1.1"
+    espresso_core = "3.2.0"
+    arouter_api = "1.5.1"
+    arouter_compiler = "1.5.1"
+
     dependencies = [
             "appcompat"       : "androidx.appcompat:appcompat:${appCompat}",
             "constraintlayout": "androidx.constraintlayout:constraintlayout:${constraintLayout}",
-            "material"        : "com.google.android.material:material:${material}"
+            "material"        : "com.google.android.material:material:${material}",
+            "junit"           : "junit:junit:${junit}",
+            "ext_junit"       : "androidx.test.ext:junit:${ext_junit}",
+            "espresso_core"   : "androidx.test.espresso:espresso-core:${espresso_core}",
+            "arouter_api"     : "com.alibaba:arouter-api:${arouter_api}",//arouter
+            "arouter_compiler": "com.alibaba:arouter-compiler:${arouter_compiler}"//arouter
     ]
 }
