--- a/config.gradle
+++ b/config.gradle
@@ -24,8 +24,10 @@ ext {
     espresso_core = "3.2.0"
     arouter_api = "1.5.1"
     arouter_compiler = "1.5.1"
+    design = "28.0.0"
 
     dependencies = [
+            "design"          : "com.android.support:design:${design}",
             "appcompat"       : "androidx.appcompat:appcompat:${appCompat}",
             "constraintlayout": "androidx.constraintlayout:constraintlayout:${constraintLayout}",
             "material"        : "com.google.android.material:material:${material}",
