--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- thirdlib/dagger/demo01(dagger入门) -->
+        <activity android:name=".thirdlib.dagger.demo01.DaggerActivity">
+            <!-- <intent-filter>-->
+            <!-- <action android:name="android.intent.action.MAIN" />-->
+            <!-- <category android:name="android.intent.category.LAUNCHER" />-->
+            <!-- </intent-filter>-->
+        </activity>
+        <!-- thirdlib/dagger/demo02(AndroidInjector的使用) -->
+        <activity android:name=".thirdlib.dagger.demo02.Dagger2Activity">
+            <!-- <intent-filter>-->
+            <!-- <action android:name="android.intent.action.MAIN" />-->
+            <!-- <category android:name="android.intent.category.LAUNCHER" />-->
+            <!-- </intent-filter>-->
+        </activity>
+        <!-- thirdlib/dagger/demo03(ContributesAndroidInjector的进一步优化) -->
+        <activity android:name=".thirdlib.dagger.demo03.Dagger3Activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- database/三方库greendao -->
         <activity android:name=".db.greendao.GreenDaoActivity">
             <!-- <intent-filter> -->
