三方库：rxjava2操作符

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- thirdlib/rxjava2/列表-->
+        <activity android:name=".thirdlib.rxjava2.Rxjava2ListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- thirdlib/rxjava2/详情-->
+        <activity android:name=".thirdlib.rxjava2.Rxjava2DetailActivity"></activity>
         <!-- thirdlib/dagger/demo01(dagger入门) -->
         <activity android:name=".thirdlib.dagger.demo01.DaggerActivity">
             <!-- <intent-filter>-->
@@ -44,10 +54,10 @@
             <!-- </intent-filter>-->
         </activity>
         <activity android:name=".thirdlib.dagger.mvp.DaggerMvpActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <!-- database/三方库greendao -->
         <activity android:name=".db.greendao.GreenDaoActivity">
