--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,9 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.21'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.21'
 
+    implementation "io.reactivex.rxjava2:rxjava:2.1.20"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
     implementation 'org.java-websocket:Java-WebSocket:1.4.0'
 
 //    // debugImplementation because LeakCanary should only run in debug builds.
