--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
 
         classpath 'com.orzangleli:checkresourceconflict:0.0.2'//checkresourceconflict
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
     }
 }
 
