--- a/component_module2/build.gradle
+++ b/component_module2/build.gradle
@@ -70,4 +70,10 @@ dependencies {
 
     implementation library.arouter_api//arouter
     annotationProcessor library.arouter_compiler//arouter
+
+    implementation 'com.google.dagger:dagger:2.21'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.21'
+    implementation 'com.google.dagger:dagger-android:2.21'
+    implementation 'com.google.dagger:dagger-android-support:2.21'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.21'
 }
