--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- jetpack/navigation/入门 -->
+        <activity android:name=".jetpack.navigation.NavigationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- jetpack/计分器demo -->
         <activity android:name=".jetpack.TeamScoreActivity">
             <!--            <intent-filter>-->
@@ -38,10 +46,10 @@
         </activity>
         <!-- jetpack/livedata -->
         <activity android:name=".jetpack.LiveDataActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <!-- jetpack/viewmodel -->
         <activity android:name=".jetpack.ViewModelActivity">
