--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'java-library'
 
-def library = rootProject.ext.dependencies
+def testImplementationDependencies = rootProject.ext.testImplementationDependencies
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation library.junit//junit
+    implementation testImplementationDependencies.junit//junit
     implementation 'org.freemarker:freemarker:2.3.29'//freemarker
     implementation 'com.google.code.gson:gson:2.8.6'//gson
 }
