--- a/common/build.gradle
+++ b/common/build.gradle
@@ -55,7 +55,9 @@ android {
     }
 }
 
-def library = rootProject.ext.dependencies
+def implementationDependencies = rootProject.ext.dependencies
+def androidTestImplementationDependencies = rootProject.ext.androidTestImplementationDependencies
+def testImplementationDependencies = rootProject.ext.testImplementationDependencies
 
 configurations {
     lintLibrary
@@ -63,11 +65,11 @@ configurations {
 
 dependencies {
 
-    implementation library.appcompat
-    implementation library.material
-    testImplementation library.junit
-    androidTestImplementation library.ext_junit
-    androidTestImplementation library.espresso_core
+    implementation implementationDependencies.appcompat
+    implementation implementationDependencies.material
+    testImplementation testImplementationDependencies.junit
+    androidTestImplementation androidTestImplementationDependencies.ext_junit
+    androidTestImplementation androidTestImplementationDependencies.espresso_core
 
     lintLibrary project(path: ":lintjar", configuration: "lintChecks")
 }
