--- a/config.gradle
+++ b/config.gradle
@@ -16,25 +16,56 @@ ext {
             "component_module2": "com.android.component_module2"
     ]
 
-    appCompat = "1.2.0"
-    constraintLayout = "1.1.3"
-    material = "1.2.1"
-    junit = "4.12"
-    ext_junit = "1.1.1"
-    espresso_core = "3.2.0"
-    arouter_api = "1.5.1"
-    arouter_compiler = "1.5.1"
-    design = "28.0.0"
+    version = [
+            design          : "28.0.0",
+            appCompat       : "1.2.0",
+            constraintLayout: "1.1.3",
+
+            material        : "1.2.1",
+
+            junit           : "4.12",
+            ext_junit       : "1.1.1",
+            espresso_core   : "3.2.0",
+            //arouter
+            arouter_api     : "1.5.1",
+            arouter_compiler: "1.5.1",
+            //retrofit
+            retrofitVersion : "2.9.0",
+
+            //gson
+            gsonVersion: "2.8.6"
+    ]
 
     dependencies = [
-            "design"          : "com.android.support:design:${design}",
-            "appcompat"       : "androidx.appcompat:appcompat:${appCompat}",
-            "constraintlayout": "androidx.constraintlayout:constraintlayout:${constraintLayout}",
-            "material"        : "com.google.android.material:material:${material}",
-            "junit"           : "junit:junit:${junit}",
-            "ext_junit"       : "androidx.test.ext:junit:${ext_junit}",
-            "espresso_core"   : "androidx.test.espresso:espresso-core:${espresso_core}",
-            "arouter_api"     : "com.alibaba:arouter-api:${arouter_api}",//arouter
-            "arouter_compiler": "com.alibaba:arouter-compiler:${arouter_compiler}"//arouter
+            "design"          : "com.android.support:design:${version["design"]}",
+            "appcompat"       : "androidx.appcompat:appcompat:${version["appCompat"]}",
+            "constraintlayout": "androidx.constraintlayout:constraintlayout:${version["constraintLayout"]}",
+
+            "material"        : "com.google.android.material:material:${version["material"]}",
+
+            //arouter
+            "arouter_api"     : "com.alibaba:arouter-api:${version["arouter_api"]}",
+
+            //net
+            "retrofit"        : "com.squareup.retrofit2:retrofit:${version["retrofitVersion"]}",
+            "converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitVersion"]}",
+            "adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitVersion"]}",
+
+            //gson
+            "gson": "com.google.code.gson:gson:${version["gsonVersion"]}"
+    ]
+
+    annotationProcessor = [
+            //arouter
+            "arouter_compiler": "com.alibaba:arouter-compiler:${version["arouter_compiler"]}"
+    ]
+
+    androidTestImplementationDependencies = [
+            "ext_junit"    : "androidx.test.ext:junit:${version["ext_junit"]}",
+            "espresso_core": "androidx.test.espresso:espresso-core:${version["espresso_core"]}"
+    ]
+
+    testImplementationDependencies = [
+            "junit": "junit:junit:${version["junit"]}"
     ]
 }
